Refactor the log generator to java 8