@@ -15,14 +15,16 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
+import static java.lang.String.format;
+
 @Component
 @Slf4j
 @RequiredArgsConstructor
 public class FileManager {
 
-    private static final int MINIMUM_NUMBER_OF_GENERATED_LOGS = 10_000_000;
+    private static final int MINIMUM_NUMBER_OF_GENERATED_LOGS = 10_000;
 
-    private static final int MAXIMUM_NUMBER_OF_GENERATED_LOGS = 15_000_000;
+    private static final int MAXIMUM_NUMBER_OF_GENERATED_LOGS = 50_000;
 
     private final LogGenerator logGenerator;
 
@@ -38,12 +40,12 @@ public class FileManager {
 
     public Path createFile(final String fileName) {
         final Path directoryPath = Paths.get(localGeneratedFilesPath);
-        assert Files.exists(directoryPath) : "directoryPath %s must exist before creating a file in it".formatted(directoryPath);
+        assert Files.exists(directoryPath) : String.format("directoryPath %s must exist before creating a file in it", directoryPath);
         final Path fileNamePath = directoryPath.resolve(fileName);
-        assert Files.notExists(fileNamePath) : "fileNamePath %s must be a new file, but it already exists".formatted(fileNamePath);
+        assert Files.notExists(fileNamePath) : String.format("fileNamePath %s must be a new file, but it already exists", fileNamePath);
         try {
             Files.createFile(fileNamePath);
-            assert Files.exists(fileNamePath) : "fileNamePath %s was not created successfully".formatted(fileNamePath);
+            assert Files.exists(fileNamePath) : String.format("fileNamePath %s was not created successfully", fileNamePath);
         } catch (IOException ioException) {
             log.error("Could not create file {}", fileNamePath.getFileName(), ioException);
             throw new RuntimeException(ioException);
@@ -51,14 +53,11 @@ public class FileManager {
         return fileNamePath;
     }
 
-    /**
-     * It will write roughly 250-350 MBs of logs into the given file.
-     */
     public void writeBatchOfLogsToFile(final Path filePath) {
         try (BufferedWriter bufferedWriter = new BufferedWriter(new FileWriter(filePath.toString(), true))) {
             final int randomNumberOfGeneratedLogs = randomNumberGenerator.generateRandomNumberInRange(MINIMUM_NUMBER_OF_GENERATED_LOGS, MAXIMUM_NUMBER_OF_GENERATED_LOGS);
             log.info("Generating {} number of logs in file {}", randomNumberOfGeneratedLogs, filePath.getFileName());
-            assert Files.exists(filePath) : "filePath %s must exist before trying to write to it".formatted(filePath.toString());
+            assert Files.exists(filePath) : String.format("filePath %s must exist before trying to write to it", filePath);
             for (int i = 0; i < randomNumberOfGeneratedLogs; i++) {
                 final String generatedLog = logGenerator.generateLog();
                 bufferedWriter.write(generatedLog);
@@ -81,15 +80,15 @@ public class FileManager {
             log.info("Moving file {} to the HDFS", filePath.getFileName());
             final org.apache.hadoop.fs.Path hdfsPath = new org.apache.hadoop.fs.Path(hdfsGeneratedFilesPath);
             final org.apache.hadoop.fs.Path pathToFileInHdfs = new org.apache.hadoop.fs.Path(hdfsGeneratedFilesPath, filePath.getFileName().toString());
-            assert hadoopFileSystem.exists(hdfsPath) : "hdfsPath %s must exist before copying to it".formatted(hdfsPath.toString());
-            assert !hadoopFileSystem.exists(pathToFileInHdfs) : "file %s already exists in the hdfs, cannot override it".formatted(pathToFileInHdfs.toString());
+            assert hadoopFileSystem.exists(hdfsPath) : format("hdfsPath %s must exist before copying to it", hdfsPath);
+            assert !hadoopFileSystem.exists(pathToFileInHdfs) : format("file %s already exists in the hdfs, cannot override it", pathToFileInHdfs);
             assert hadoopFileSystem.getFileStatus(hdfsPath).isDirectory() : "hdfsPath %s must be a path to a directory";
-            assert Files.exists(filePath) : "filePath %s must exist before copying it to the hdfs".formatted(filePath.toString());
+            assert Files.exists(filePath) : format("filePath %s must exist before copying it to the hdfs", filePath);
             hadoopFileSystem.copyFromLocalFile(new org.apache.hadoop.fs.Path(filePath.toString()), hdfsPath);
-            assert hadoopFileSystem.exists(pathToFileInHdfs) : "file %s was not copied to the hdfs successfully".formatted(hdfsPath.toString());
-            assert Files.size(filePath) == hadoopFileSystem.getFileStatus(pathToFileInHdfs).getLen() : "file %s was not copied entirely to the hdfs".formatted(filePath.toString());
+            assert hadoopFileSystem.exists(pathToFileInHdfs) : format("file %s was not copied to the hdfs successfully", hdfsPath);
+            assert Files.size(filePath) == hadoopFileSystem.getFileStatus(pathToFileInHdfs).getLen() : format("file %s was not copied entirely to the hdfs", filePath);
             Files.delete(filePath);
-            assert !Files.exists(filePath) : "file (%s) has not been deleted successfully after it has been transferred to the HDFS".formatted(filePath.getFileName().toString());
+            assert !Files.exists(filePath) : format("file (%s) has not been deleted successfully after it has been transferred to the HDFS", filePath.getFileName().toString());
             log.info("File {} moved successfully to the HDFS", filePath.getFileName());
         } catch (IOException e) {
             throw new RuntimeException(e);
